--- a/TicTacToe.Console/TicTacToe.Console.csproj
+++ b/TicTacToe.Console/TicTacToe.Console.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Monxterz.StatePlatform.ClientServices" Version="1.3.0" />
+    <PackageReference Include="Terminal.Gui" Version="1.8.2" />
   </ItemGroup>
 
 </Project>
