--- a/GameMaster.Tests/GameMaster.Tests.csproj
+++ b/GameMaster.Tests/GameMaster.Tests.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="Monxterz.StatePlatform.GameTesting" Version="1.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GameClient\GameClient.csproj" />
+  </ItemGroup>
+
 </Project>
