--- a/TicTacToe.Console/TicTacToe.Console.csproj
+++ b/TicTacToe.Console/TicTacToe.Console.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Monxterz.StatePlatform.ClientServices" Version="1.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GameClient\GameClient.csproj" />
+  </ItemGroup>
+
 </Project>
