docs: Document tool restoration and add a helper task https://learn.microsoft.com/en-us/dotnet/core/tools/local-tools-how-to-use#restore-a-local-tool-installed-by-others

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,24 @@
     "version": "2.0.0",
     "tasks": [
         {
+            "label": "dotnet tool restore",
+            "type": "shell",
+            "command": "dotnet",
+            "args": [
+                "tool",
+                "restore"
+            ],
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": true,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": false
+            },
+            "problemMatcher": []
+        },
+        {
             "label": "gamemaster publish dev",
             "type": "shell",
             "command": "dotnet",
